--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,49 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeFiles-build-debug
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+cmake-build-debug/
+*.cmake
+*.tcl
+#
+*.cbp
+*.tpl
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# doxygen
+*~
+.*sw?
+\#*
+.DS_Store
+
+*.rej
+*.orig
+
+*.pro
+/packages/rpm/doxygen.spec
+*.idb
+*.pdb
+
+/docs/doxygen_docs
+/docs/doxygen.tag
+/docs/build*
+arpsc
