Added format config and update configs

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,13 @@ __pycache__/
 /docs/doxygen.tag
 /docs/build*
 arpsc
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
